BuildHughes/translation-tool/inputs/source_meta/objects/Common_CustomerPreferencesAPIFieldMapper__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Contact_API_Name__c</fullName>
        <label>Contact API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluate_On_Retrieve__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can we retrieve this field when a retrieve request issue requested to the API?
Ex : Email</description>
        <inlineHelpText>Can we retrieve this field when a retrieve request issue requested to the API?
Ex : Email</inlineHelpText>
        <label>Evaluate On Retrieve?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_On_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this field be considered for updation?</description>
        <inlineHelpText>Should this field be considered for updation?</inlineHelpText>
        <label>Evaluate On Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Enumerable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should this field be considered when transforming the request wrapper to contact SObject</description>
        <inlineHelpText>Should this field be considered when transforming the request wrapper to contact SObject</inlineHelpText>
        <label>Enumerable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preference_Type__c</fullName>
        <description>Indicates the type of preference to be sent back
Example : General, Billing Preferences .. etc</description>
        <inlineHelpText>Indicates the type of preference to be sent back
Example : General, Billing Preferences .. etc</inlineHelpText>
        <label>Preference Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Field__c</fullName>
        <description>This stores the api name of the field which is used by the processor in the where clause</description>
        <inlineHelpText>The api name of the field which is used by the processor in the where clause</inlineHelpText>
        <label>Processor Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <description>The API name of the class used to retrieve data from an SObject
Example : HSvc_AccountsRetriever</description>
        <inlineHelpText>The API name of the class used to retrieve data from an SObject
Example : HSvc_AccountsRetriever</inlineHelpText>
        <label>Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Captures the client system which is making a request to this API.
Example : CMC</description>
        <inlineHelpText>Captures the client system which is making a request to this API.
Example : CMC</inlineHelpText>
        <label>Source System</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestParam__c</fullName>
        <description>The name of the property in the webservice class
Example : contactFirstName</description>
        <label>requestParam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common_CustomerPreferencesAPIFieldMapper</label>
</CustomObject>